<resources>
    <string name="app_name">Smart Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="option_3">option_3</string>
    <string name="option_4">option_4</string>
    <string name="_00_00">_00_00</string>
    <string name="option_2">option_2</string>
    <string name="option_1">option_1</string>
    <string name="what_is_this_question">what_is_this_question</string>
    <string name="timer">%02d</string>
    <string name="title_activity_maps">Map</string>
</resources>
