<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.example.jennwong.smartup.Quiz_mainactivity">

    <RelativeLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3"
        >

        <TextView
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:fontFamily="sans-serif"
            android:id="@+id/questionsTxt"
            android:textAlignment="center"
            android:padding="10dp"
            android:text="@string/what_is_this_question"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp"/>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_weight="2.5"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="8dp"
        android:rowCount="1">

        <Button
            android:layout_width="0dp"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/button1"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="match_parent"
            android:layout_weight ="1"
            android:background="@drawable/button_color"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/option_1"
            android:clickable="true"

            />

        <Button
            android:layout_width="0dp"
            android:id="@+id/button2"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="match_parent"
            android:layout_weight ="1"
            android:background="@drawable/button_color"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/option_2"
            android:clickable="true"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_weight="2.5"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="8dp"
        android:rowCount="1" >

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:id="@+id/button3"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="match_parent"
            android:layout_weight ="1"
            android:background="@drawable/button_color"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/option_3"
            android:clickable="true"


            />

        <Button
            android:layout_width="0dp"
            android:id="@+id/button4"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="match_parent"
            android:layout_weight ="1"
            android:background="@drawable/button_color"
            android:scaleType="fitCenter"
            android:padding="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/option_4"
            android:clickable="true"


            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="5dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/timerTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_00_00"
            android:textAlignment="center"
            android:textSize="28sp" />

    </LinearLayout>




</LinearLayout>


